--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="env/config.js"></script>
     <!-- your scripts -->
    
     <script src="scripts/app.js"></script>
